--- a/style.css
+++ b/style.css
@@ -10,3 +10,11 @@ canvas {
     border: 10px solid rgb(139, 212, 195);
     color: beige;
 }
+
+h1 {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-weight: 700;
+    font-size: 4rem;
+    padding: 0 280px;
+    margin-top: 10px;
+}
